Made image smaller
You know what it is

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<p>
 			<h1>Careful who you trust. </h1> 
 		</p>
-		<img src="https://tctechcrunch2011.files.wordpress.com/2017/05/hacking-intensifies.png">
+		<img src="https://tctechcrunch2011.files.wordpress.com/2017/05/hacking-intensifies.png" height="300" width="450">
 
 	</body>
 
